[package]
name = "sbhx_store"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.5.0"
actix-web = { version = "3"}
braintree = { version="0.0.7", git="https://github.com/dloman/braintree-rs" }
serde = { version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
url = { version = "2", features = ["serde"] }
log = "0.4.0"
env_logger = "0.8.4"

